--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,6 @@ phases:
   post_build:
     commands:
       - echo "Updating Lambda Function..."
-      - aws lambda update-function-code --function-name your-lambda-function-name --zip-file fileb://deployment_package.zip
+      - aws lambda update-function-code --function-name test-lambda --zip-file fileb://deployment_package.zip
       - echo "DONE!!"
 s
